<resources>
    <string name="app_name">p2Matheus_C</string>

    <string name="result">Result</string>
    <string name="result_colon">Result:</string>
    <string name="number1_colon">Number 1:</string>
    <string name="number2_colon">Number 2:</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="compute_to_add">Compute to Add</string>
    <string name="compute_to_multiply">Compute to Multiply</string>
    <string name="zero">0.0</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_multiply">MultiplyActivity</string>
</resources>
