<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context="edu.uco.mcamposcardoso.p2matheus_c.MultiplyActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Multiply Activity"
        android:textColor="#ECEFF1"
        android:gravity="center"
        android:background="#AD1457"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/number1_colon"
            android:textColor="#ECEFF1"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumber1MultiplyyActivity" />

        <TextView
            android:text="@string/zero"
            android:textColor="#ECEFF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumber1MultiplyActivity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/number2_colon"
            android:textColor="#ECEFF1"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumber2MultiplyyActivity" />

        <TextView
            android:text="@string/zero"
            android:textColor="#ECEFF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumber2MultiplyActivity"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/result_colon"
            android:textColor="#ECEFF1"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultMultiplyyActivity" />

        <TextView
            android:text=""
            android:textColor="#ECEFF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultMultiplyActivity"/>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#AD1457"
            android:textColor="#ECEFF1"
            android:text="@string/compute_to_multiply"
            android:id="@+id/btnMultiplyMultiplyActivity" />

</LinearLayout>
